css/style.css
body{
    /*//margin-top:50px;*/
}

header .branding {
    display:block;
    width:100%;
    background:white;
// max-width:960px;
    margin:0 auto;
}


h3{
    color:grey;
}
div.heading p{
    font-size:12px;
    color: #aba8a8;
}

#header .container-fluid{
    background-image: url("../img/bg.png") !important;
    background-repeat: repeat;
}


#header .container-fluid nav ul li a{
    color:grey;
    text-transform: uppercase ;
    font-size:10px;
    font-weight: bold;
}

#header .container-fluid nav ul li a.active{
    color:white;

}

#header .container-fluid nav ul li a:hover, a:focus  {
    text-decoration:none;
    color:white;
}

#header a.navbar-brand{
    color:white !important ;
}

#banner{
    color:white;
    background: url(http://hariborn.crunchkode.com/img/section-banner.jpg) fixed no-repeat center;
    background-size: cover;
    height: 300px;

}

#banner p.tagline {
    margin-top: 40px;
    text-align: center;
    font-size: 22px;
}

#banner-body{
    margin-top: -200px;

}



#banner-body .container .col-md-12 .container{
    border: 4px solid white;
    background-color: black;
    box-shadow: 2px 2px 2px grey;

}

#banner-body .left-content h4{
    padding-top:25px;
}

#banner-body .left-content p{
    color:grey;
}

#banner-body .left-content a:hover, a:focus  {
    text-decoration:none;
    color:white;

}

#banner-body .left-content h4, #banner-body .left-contentspan, #banner-body .left-content p{
    padding-left: 30px;
}

#banner-body .left-content  button{
    margin-left:25px;
    border-radius: 13px;
    font-size:10px;
    padding:7px 25px 7px 25px;
}

#banner-body .left-content  p{
    padding-top:10px
}

#banner-body h4{
    padding-top: 20px;
    padding-bottom: 20px;
    color: #949494;
}

#banner-body h4 span{
    font-size:12px;
    color: #bdbcbc;
    margin-left: -1px;
}
#banner-body h4 span span.price{
    font-size:12px;
    color: #4374bd;
}



#banner-body .left-content button.btn.btn-info.more-info-outline {
    border-color: white;
    background-color: transparent !important;
}

#banner-body .right-content{
    background-color:black;
}
#banner-body .right-content img{
    margin: auto;
    margin-left: -16px;
    margin-right: 20px;
    width:100%;
    height: 250px;

}

#banner-body .left-content{
    margin-left:-15px;
    color:white;
    background-image: url("../img/bg.png") !important;
    background-repeat: repeat;
    height: 250px;
}

nav{
    /*width:100%;
    background:blue;*/
}

div.heading p{
    font-size:12px;
    color: #aba8a8;
}

#client-testimonials{
    text-align:center;
}

#client-testimonials img.img-circle.img-thumbnail {
    border-radius: 50%;
    width: 75px;
    border: 0px solid white;
    box-shadow: 1px 1px 1px grey;
}

#client-testimonials p.clients-words{
    color: #64b7ff;
}

#client-testimonials p.clients-link.text-primary {
    color: #c5c5c5;
    font-size: 12px;
    padding-top:0px;
}
.navbar{
    border: 0px solid white;
}

.feature-site{
    width: 100%;
    height: 250px;
    border: 2px solid white;
    box-shadow: 2px 2px 2px grey;
}

.feature h4 , .feature p{
    text-align: center;
}
.feature-glypicon{
    font-size:75px;
}

.feature-bg{
    color:white;
    background: url(http://hariborn.crunchkode.com/img/section-banner.jpg) fixed no-repeat center;
    background-size: cover;
    height: 300px;
}

.feature-content{
    margin-top:40px;
}
.feature .description{
    font-size:12px;
    text-align: center;
    color: grey;
}





#footer .container-fluid{
    background-image: url("../img/bg.png") !important;
    background-repeat: repeat;
}

footer{
    padding: 10px 10px 10px 10px;
    height: 80px !important;
    color: grey;
}

footer p {
    margin-top:20px;
    margin-bottom:10px;

}

.social [class*="fa fa-"] {
    background-color: #fdfdfd;
    border-radius: 30px;
    color: #060606;
    display: inline-block;
    height: 30px;
    line-height: 30px;
    margin: auto 3px;
    width: 30px;
    font-size: 15px;
    text-align: center;
}

